[package]
name = "rsabsint"
version = "0.1.0"
edition = "2021"
build="build.rs"

[[bin]]
doc = true
name = "rsabsint"
path = "src/main.rs"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13.1"
lrpar = { version = "0.13.8", features = ["_unstable_api"] }

[dependencies]
cfgrammar = "0.13"
lrlex = "0.13.1"
lrpar = { version = "0.13.8", features = ["_unstable_api"] }
